# ERP-project

./: ERP-SYSTEM-PLANNING.md  PRD_AND_SPEC.md  README.md  package.json
.agents/: AGENTS.md
erp-platform/backend/: Dockerfile  mypy.ini  pyproject.toml  ruff.toml
erp-platform/backend/alembic/: alembic.ini  env.py
erp-platform/backend/app/: config.py  dependencies.py  main.py  worker.py
erp-platform/backend/app/core/: base.py  config.py  deps.py  events.py  security.py  websocket.py
erp-platform/backend/app/core/audit/: tracker.py
erp-platform/backend/app/core/cache/: redis.py
erp-platform/backend/app/core/database/: __init__.py  base.py  mixins.py  session.py  types.py
erp-platform/backend/app/core/events/: __init__.py  dispatcher.py
erp-platform/backend/app/core/i18n/: translator.py
erp-platform/backend/app/core/logging/: logger.py  middleware.py
erp-platform/backend/app/core/queue/: celery_app.py  tasks.py
erp-platform/backend/app/core/search/: elastic.py
erp-platform/backend/app/middleware/: audit.py  auth.py  cors.py
erp-platform/backend/app/schemas/: common.py
erp-platform/backend/app/tasks/: hr_tasks.py
erp-platform/backend/app/utils/: barcode.py  export.py  pagination.py
erp-platform/backend/requirements/: base.txt  dev.txt
erp-platform/backend/tests/: conftest.py  test_health.py
erp-platform/backend/tests/admin/: test_models.py  test_repository.py  test_router.py  test_service.py
erp-platform/backend/tests/auth/: test_router.py  test_service.py
erp-platform/backend/tests/integrations/: test_models.py  test_repository.py  test_router.py  test_service.py
(+379 files in other folders)
